tests/negative/neg_task_end_mismatch.safe
-- Test: neg_task_end_mismatch
-- Description: Legacy explicit task-body block delimiters are not allowed.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p4:016e5737
-- Expected: REJECT source_frontend_error

package task_end_mismatch_test

   task worker

      begin


